--- a/GymApp/Views/Dashboard/Index.cshtml
+++ b/GymApp/Views/Dashboard/Index.cshtml
@@ -1,11 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<AppUser> SignInManager
+@inject UserManager<AppUser> UserManager
 
 @model GymApp.ViewModels.DashboardViewModel
 
 <h1 class="display-4 fw-normal">User Dashboard</h1>
-<a type="button" class="btn btn-primary" asp-area="" asp-controller="Gym" asp-action="Create">Create Gym</a>
-<a type="button" class="btn btn-primary" asp-area="" asp-controller="WorkoutProgram" asp-action="Create">Create WorkoutProgram</a>
+@*@if (SignInManager.IsSignedIn(User) && RoleManager.Equals("admin"))
+{*@
+    <a type="button" class="btn btn-primary" asp-area="" asp-controller="Gym" asp-action="Create">Create Gym</a>
+    <a type="button" class="btn btn-primary" asp-area="" asp-controller="WorkoutProgram" asp-action="Create">Create WorkoutProgram</a>    
+@*}*@
 <a type="button" class="btn btn-primary" asp-area="" asp-controller="Dashboard" asp-action="EditUserProfile">Edit User Profile</a>
 <div class="album py-5 bg-light">
     <div class="container">
@@ -22,12 +26,11 @@
                             <p class="card-text">@item.Description</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a type="btn btn-success" asp-controller="WorkoutProgram" asp-action="Detail" asp-route-id="@item.Id"
-                                   class="btn btn-sm btn-outline-secondary">View</a>
+                                    <a type="btn btn-success" asp-controller="WorkoutProgram" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">View</a>
                                     @if (SignInManager.IsSignedIn(User))
                                     {
-                                        <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                        <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                        <a asp-controller="WorkoutProgram" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                        <a asp-controller="WorkoutProgram" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
                                     }
                                 </div>
                                 <small class="text-muted">@item.WorkoutProgramCategory</small>
@@ -49,8 +52,7 @@
                             <p class="card-text">@item.Description</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a type="btn btn-success" asp-controller="Gym" asp-action="Detail" asp-route-id="@item.Id"
-                                   class="btn btn-sm btn-outline-secondary">View</a>
+                                    <a type="btn btn-success" asp-controller="Gym" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">View</a>
                                     @if (SignInManager.IsSignedIn(User))
                                     {
                                         <a asp-controller="Gym" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
