--- a/GymApp/Views/Gym/Edit.cshtml
+++ b/GymApp/Views/Gym/Edit.cshtml
@@ -32,8 +32,8 @@
         <span asp-validation-for="Address.Street" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Address.Province">State</label>
-        <input asp-for="Address.Province" class="form-control" placeholder="Street">
+        <label asp-for="Address.Province">Province</label>
+        <input asp-for="Address.Province" class="form-control" placeholder="Province">
         <span asp-validation-for="Address.Province" class="text-danger"></span>
     </div>
     <div class="form-group">
