--- a/GymApp/Views/Gym/Index.cshtml
+++ b/GymApp/Views/Gym/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@using GymApp.ViewModels
+@using GymApp.Data.Enum
 @model IndexGymViewModel
 
 @{
     bool isAuthenticated = User.Identity?.IsAuthenticated == true;
-    int resultStart = ((Model.PageIndex - 1) * Model.PageSize) + 1;
-    int resultEnd = resultStart + Model.PageSize - 1;
-
+    int resultStart = ((Model.Page - 1) * Model.PageSize) + 1;
+    int resultEnd = Math.Min(resultStart + Model.PageSize - 1, Model.TotalGyms);
     bool isValidPage = resultStart <= Model.TotalGyms;
 
 
@@ -13,33 +13,35 @@
     var nextDisabled = !Model.HasNextPage ? "disabled" : "";
 }
 <section class="space-sm flush-with-above">
+      <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <p>Gym Categories</p>
+                <div class="mb-3">
+                    <a type="button" class="btn btn-secondary mb-1" asp-action="Index" asp-route-page="1" asp-route-category="-1">All</a>
+                    @foreach (var category in Html.GetEnumSelectList<GymCategory>())
+                    {
+                        <a type="button" class="btn btn-secondary mb-1" asp-action="Index" asp-route-page="1" asp-route-category="@category.Value">@category.Text</a>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <div>
                 @if (isValidPage)
                 {
-                    <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" type="button" class="btn btn-sm btn-outline-primary @prevDisabled">
+                     <a type="button" class="btn btn-sm btn-outline-primary @prevDisabled"
+                   asp-action="Index" asp-route-page="@(Model.Page - 1)" asp-route-category="@Model.Category">
                         Prev
                     </a>
-                    <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" type="button" class="btn btn-sm btn-outline-primary @nextDisabled">
+                    <a type="button" class="btn btn-sm btn-outline-primary @nextDisabled"
+                   asp-action="Index" asp-route-page="@(Model.Page + 1)" asp-route-category="@Model.Category">
                         Next
                     </a>
                     <span class="text-muted text-small">Results @resultStart - @resultEnd of @Model.TotalGyms</span>
                 }
-                else
-                {
-                    <span class="text-muted text-small">Not Found</span>
-                }
-            </div>
-            <form class="d-flex align-items-center">
-                <span class="mr-2 text-muted text-small text-nowrap">Sort by:</span>
-                <select class="custom-select">
-                    <option value="alpha">Alphabetical</option>
-                    <option value="old-new" selected="">Newest</option>
-                    <option value="new-old">Oldest</option>
-                    <option value="recent">Recently Modified</option>
-                </select>
-            </form>
         </div>
         <ul class="row feature-list feature-list-sm">
             @foreach(var gym in Model.Gyms)
@@ -47,11 +49,19 @@
                 <li class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <a type="button" asp-controller="Gym" asp-action="Detail" asp-route-id="@gym.Id">
-                            <img class="card-img-top" src="@gym.Image" alt="Card image cap">
+                            @if(@gym.Image != null)
+                            {
+                                <img class="card-img-top" src="@gym.Image" alt="Card image cap">   
+                            }
+                            else
+                            {
+                                <img class="card-img-top" src="/img/rungroopclub.png" alt="Card image cap">   
+                            }
                         </a>
                         <div class="card-body">
                             <h4 class="card-title">@gym.Title</h4>
                             <p class="card-text">@gym.Description</p>
+                            <p class="card-text">@gym.Address.City, @gym.Address.Province</p>
                         </div>
                         <div class="card-footer card-footer-borderless d-flex justify-content-between">
                             <div>
@@ -73,5 +83,21 @@
                 </li>
             }
         </ul>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <div>
+                @if (isValidPage)
+                {
+                     <a type="button" class="btn btn-sm btn-outline-primary @prevDisabled"
+                   asp-action="Index" asp-route-page="@(Model.Page - 1)" asp-route-category="@Model.Category">
+                        Prev
+                    </a>
+                    <a type="button" class="btn btn-sm btn-outline-primary @nextDisabled"
+                   asp-action="Index" asp-route-page="@(Model.Page + 1)" asp-route-category="@Model.Category">
+                        Next
+                    </a>
+                    <span class="text-muted text-small">Results @resultStart - @resultEnd of @Model.TotalGyms</span>
+                }
+            </div>
+        </div>
     </div>
 </section>
