--- a/GymApp/Views/Shared/_Layout.cshtml
+++ b/GymApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,13 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using System.Security.Claims
+@inject SignInManager<AppUser> SignInManager
+@inject UserManager<AppUser> UserManager
+
+@{
+    var currentUser = await UserManager.GetUserAsync(User);
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -16,19 +25,19 @@
         <div class="bg-light navbar-light" data-sticky="top">
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" id="logo-text">Gym App</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="icon-menu h4"></i>
-                </button>
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index" id="logo-text">Gym App</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="icon-menu h4"></i>
+                    </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        @if (User.Identity.IsAuthenticated)
+                        @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="user" asp-action="Index">Find GymGoers</a>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">Find GymGoers</a>
                             </li>
                         }
                         <li class="nav-item">
@@ -38,36 +47,46 @@
                             <a class="nav-link" asp-area="" asp-controller="WorkoutProgram" asp-action="Index"> Find Workout Programs</a>
                         </li>
                     </ul>
-                    @if (User.Identity.IsAuthenticated)
+                    @if (SignInManager.IsSignedIn(User))
                     {
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Dashboard</a>
-                                    <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                                        <a class="dropdown-item" href="pages-landing.html">
-                                            <span class="h6 mb-0">Create Club</span>
-                                        </a>
+                                <a class="nav-link dropdown-toggle p-lg-0" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    @if (!string.IsNullOrEmpty(currentUser.ProfileImageUrl))
+                                    {
+                                        <img alt="Image" src="@currentUser.ProfileImageUrl" class="avatar avatar-xs">
+                                    }
+                                    else
+                                    {
+                                        <img alt="Image" src="/img/avatar-male-4.jpg" class="avatar avatar-xs">
+                                    }
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                                    @if (User.IsInRole("admin"))
+                                        {                                        
+                                                <a class="dropdown-item" asp-controller="Gym" asp-action="Create">
+                                                    <span class="h6 mb-0">Create Gym</span>
+                                                </a>
 
-                                    <div class="dropdown-divider"></div>
+                                            <div class="dropdown-divider"></div>
 
-                                        <a class="dropdown-item" href="pages-app.html">
-                                            <span class="h6 mb-0">Create Race</span>
-                                        </a>
-
-                                    <div class="dropdown-divider"></div>
-
-                                        <a class="dropdown-item" href="pages-inner.html">
-                                            <span class="h6 mb-0">Edit User Profile</span>
-                                        </a>
-                                    <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="pages-inner.html">
-                                            <span class="h6 mb-0">Manage Your Gyms/Workoutprograms</span>
-                                        </a>
-                                    <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="pages-inner.html">
-                                            <span class="h6 mb-0">Logout</span>
-                                        </a>
-                                    </div>
+                                                <a class="dropdown-item" asp-area="" asp-controller="WorkoutProgram" asp-action="Create">
+                                                    <span class="h6 mb-0">Create WorkoutProgram</span>
+                                                </a>                                        
+                                        }                                   
+                                <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" asp-controller="User" asp-action="Detail" asp-route-id="@currentUser.Id">
+                                        <span class="h6 mb-0">View Profile</span>
+                                    </a>
+                                <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" asp-controller="User" asp-action="EditProfile">
+                                        <span class="h6 mb-0">Edit Profile</span>
+                                    </a>
+                                <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" asp-controller="Account" asp-action="Logout">
+                                        <span class="h6 mb-0">logout</span>
+                                    </a>
+                                </div>
                             </li>
                         </ul>     
                     }
@@ -75,10 +94,8 @@
                     {
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a asp-area="" asp-controller="Account"
-                                asp-action="Register">Sign up</a>
-                                    <span>&nbsp;or&nbsp;</span><a asp-area="" asp-controller="Account"
-                                asp-action="Login">Sign in</a>
+                                <a asp-area="" asp-controller="Account" asp-action="Register">Sign up</a>
+                                <span>&nbsp;or&nbsp;</span><a asp-area="" asp-controller="Account" asp-action="Login">Sign in</a>
                             </li>
                         </ul>
                     }
@@ -96,43 +113,72 @@
             </main>
     </div>
 
-     <footer class="bg-gray text-light footer-long">
+    <footer class="bg-gray text-light footer-long">
         <div class="container">
-          <div class="row">
-            <div class="col-12 col-md-3">
-              <a class="text" asp-area="" asp-controller="Home" asp-action="Index" id="logo-text">GymApp</a>
-            </div>
-            <!--end of col-->
-            <div class="col-12 col-md-9">
-              <span class="h5">Gym Platform.</span>
-              <div class="row no-gutters">
-                <div class="col-6 col-lg-3">
-                  <h6>Find Gyms</h6>
-                  <ul class="list-unstyled">
-                    <li>
-                      <a href="index.html">Gyms in Dublin</a>
-                    </li>
-                    <li>
-                      <a href="pages-landing.html">Gyms in Cork</a>
-                    </li>
-                    <li>
-                      <a href="pages-app.html">Gyms in Galway</a>
-                    </li>
-                  </ul>
+            <div class="row">
+                <div class="col-12 col-md-3">
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" id="logo-text">GymApp</a>
+                    <p class="text-muted">&copy; 2022 GymApp
+                        <br />
+                        <br />
+                    </p>
                 </div>
                 <!--end of col-->
-              </div>
-              <!--end of row-->
+            <div class="col-12 col-md-9">
+                <span class="h5">Gym Platform.</span>
+                <div class="row no-gutters">
+                    <div class="col-6 col-lg-3">
+                        <h6>Navigate</h6>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a  asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li>
+                                <a  asp-area="" asp-controller="Gym" asp-action="Index">Find Gyms Close By</a>
+                            </li>
+                                @if (SignInManager.IsSignedIn(User))
+                                {
+                                    <li>
+                                        <a  asp-area="" asp-controller="Users" asp-action="Index">Find GymGoers Close By</a>
+                                    </li>                                    
+                                }
+                                
+                        </ul>
+                    </div>
+                    <!--end of col-->
+                    <div class="col-6 col-lg-3">
+                        <h6>Gym Directory</h6>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a  asp-area="" asp-controller="Gym" asp-action="GymsByProvinceForCityDirectory">Find Gyms By City</a>
+                            </li>
+                            <li>
+                                <a  asp-area="" asp-controller="Gym" asp-action="GymsByProvinceDirectory">Find Gyms By Province</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--end of col-->
+                    <div class="col-6 col-lg-3">
+                        <h6>Social</h6>
+                        <ul class="list-unstyled">
+                            <li>
+                              <a href="https://github.com/Flood-Locke">GitHub</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of col-->
             </div>
-            <!--end of col-->
-          </div>
-          <!--end of row-->
+            <!--end of row-->
+            </div>
         </div>
         <!--end of container-->
-      </footer>
+    </footer>
     <script src="~/js/jquery.min.js"></script>
     <script src="~/js/bootstrap.js"></script>
     <script src="~/js/theme.js"></script>
+    <script src="~/js/custom.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
