--- a/GymApp/Views/WorkoutProgram/Create.cshtml
+++ b/GymApp/Views/WorkoutProgram/Create.cshtml
@@ -2,29 +2,64 @@
 @using GymApp.ViewModels
 @model CreateWorkoutProgramViewModel
 
-<form method="post" asp-action="Create" enctype="multipart/form-data">
-    <input type="hidden" id="AppUserId" name="AppUserId" asp-for="AppUserId" />
-        <div class="form-group">
-            <label asp-for="Title">Title</label>
-            <input asp-for="Title" class="form-control" placeholder="Title" />
-            <span asp-validation-for="Title" class="text-danger"></span>  
+<div class="navbar-container"></div>
+<div class="main-container">
+    <section class="space-sm">
+    <div class="container">
+        <div class="row mb-5">
+        <!--end of col-->
         </div>
-        <div class="form-group">
-            <label asp-for="Description">Description</label>
-            <input asp-for="Description" class="form-control" placeholder="Description" />
-            <span asp-validation-for="Description" class="text-danger"></span>  
-        </div> 
-        <div class="form-group">
-            <label asp-for="WorkoutProgramCategory">WorkoutProgramCategory</label>
-            <select asp-for="WorkoutProgramCategory" asp-items="@Html.GetEnumSelectList<GymCategory>()" class="form-control form-control-lg">
-                <option>--Select--</option>
-                </select>
-            <span asp-validation-for="WorkoutProgramCategory" class="text-danger"></span>  
-        </div> 
-        <div class="form-group">
-            <label asp-for="Image">Image</label>
-            <input asp-for="Image" type="file" class="form-control" placeholder="Image" />
-            <span asp-validation-for="Image" class="text-danger"></span>  
-        </div> 
-        <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+        <!--end of row-->
+        <div class="row flex-md-row card card-md">
+        <div class="card-body bg-secondary">
+            <div class="text-center mb-5">
+            <h1 class="h2 mb-2">Create your own race</h1>
+            <span>Challenge the runners in your community</span>
+            </div>
+            <div class="row justify-content-center">
+            <div class="col-6 col-lg-5">
+                <form method="post" asp-action="Create" enctype="multipart/form-data">
+                    <input type="hidden" id="AppUserId" name="AppUserId" asp-for="AppUserId" />
+                        <div class="form-row form-group">
+                            <div class="col"> 
+                                <input asp-for="Title" class="form-control form-control-lg" placeholder="Title" />
+                                <span asp-validation-for="Title" class="text-danger"></span>
+                            </div> 
+                        </div>
+                        <div class="form-row form-group">
+                            <div class="col"> 
+                                <input asp-for="Description" class="form-control form-control-lg" placeholder="Description" />
+                                <span asp-validation-for="Description" class="text-danger"></span>
+                            </div>
+                        </div> 
+                        <div class="form-row form-group">
+                            <div class="col"> 
+                            <select asp-for="WorkoutProgramCategory"asp-items="@Html.GetEnumSelectList<WorkoutProgramCategory>()" class="form-control">
+                                <option>--Select--</option>
+                            </select>
+                            <span asp-validation-for="WorkoutProgramCategory" class="text-danger"></span>  
+                        </div> 
+                        <div class="form-row form-group">
+                            <div class="col">                        
+                            <input asp-for="Image" type="file" class="form-control form-control-lg" placeholder="Image" />
+                            <span asp-validation-for="Image" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-row form-group">
+                            <div class="col">
+                            <button class="btn btn-block btn-success btn-lg" type="submit">Create Account</button>
+                            </div>
+                        </div>
+                </form>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    <!--end of container-->
+    </section>
+    <!--end of section-->
+</div>
+                    
+                    
+                  
