--- a/GymApp/Views/WorkoutProgram/Detail.cshtml
+++ b/GymApp/Views/WorkoutProgram/Detail.cshtml
@@ -1,4 +1,5 @@
 ﻿@model WorkoutProgram
+
  <div class="main-container">
       <nav aria-label="breadcrumb" role="navigation" class="bg-primary text-white">
         <div class="container">
@@ -39,18 +40,7 @@
               </div>
               <div>
                 <div class="btn-group mb-2">
-                  <button type="button" class="btn btn-success btn-lg">Join Gym</button>
-                  <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split dropdown-toggle-no-arrow" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="icon-dots-three-horizontal"></i>
-                    <span class="sr-only">Toggle Dropdown</span>
-                  </button>
-                  <div class="dropdown-menu dropdown-menu-right dropdown-menu-sm">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                  </div>
+                  <button type="button" class="btn btn-success btn-lg">Follow Program</button>
                 </div>
               </div>
             </div>
